# faster-app

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build_macos.sh  fasterx_results.html
.github/workflows/: deploy.yml
assets/: custom.css  file_upload.css
docs/: 404.html  custom.css  file_upload.css  index.html
docs/assets/dioxus/: faster-app.js  faster-app_bg.wasm
docs/assets/dioxus/snippets/dioxus-interpreter-js-7c1300c6684e1811/: inline0.js
src/: components.rs  main.rs  modules.rs
